# qson

python/: Makefile  setup.cfg
python/qson/: __init__.py  errors.py  qson.py
python/tests/: test_qson.py
