[metadata]
name = qson-py
author = Språkbanken at the University of Gothenburg
maintainer = Språkbanken
maintainer-email = sb-info@svenska.gu.se
summary = Query String Object Notation..
description-file = README.md
home-page = https://www.github.com/spraakbanken/qson
license = MIT
classifier =
	Development Status :: 2 - Pre-Alpha
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Operating System :: Unix
    Operating System :: POSIX
    # Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    # Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    # uncomment if you test on these interpreters:
    # Programming Language :: Python :: Implementation :: IronPython
    # Programming Language :: Python :: Implementation :: Jython
    # Programming Language :: Python :: Implementation :: Stackless
    Topic :: Utilities

[files]
packages = 
	qson

[extras]
dev = 
	pytest
	pytest-cov
    black
    isort
